k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mockexam
  labels:
    name: mockexam
    environment: production
